stage0/src/include/lean/lean.h

typedef lean_object * b_lean_obj_arg; /* Borrowed object argument. */
typedef lean_object * lean_obj_res;   /* Standard object result. */
static inline uint8_t lean_int8_of_int(b_lean_obj_arg a) {
    int8_t res;

    if (lean_is_scalar(a)) {
        res = (int8_t)lean_scalar_to_int64(a);
    } else {
        res = lean_int8_of_big_int(a);
    }

    return (uint8_t)res;
}
static inline lean_obj_res lean_int8_to_int(uint8_t a) {
    int8_t arg = (int8_t)a;
    return lean_int64_to_int((int64_t)arg);
}
static inline uint8_t lean_int8_neg(uint8_t a) {
    // do not cast to `int8_t`, as there underflow is undefined behavior
    return -a;
}
static inline uint8_t lean_int8_add(uint8_t a1, uint8_t a2) {
    // do not cast to `int8_t`, as there overflow is undefined behavior
    return a1 + a2;
}
static inline uint8_t lean_int8_sub(uint8_t a1, uint8_t a2) {
    // do not cast to `int8_t`, as there overflow is undefined behavior
    return a1 - a2;
}
static inline uint8_t lean_int8_mul(uint8_t a1, uint8_t a2) {
    // do not cast to `int8_t`, as there overflow is undefined behavior
    return 1U * a1 * a2;
}
static inline uint8_t lean_int8_div(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;
    if (rhs == 0) return 0;
    // Widen to 16-bit to avoid x86 idiv overflow trap on INT8_MIN / -1
    return (uint8_t)((int16_t)lhs / (int16_t)rhs);
}
static inline uint8_t lean_int8_mod(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;
    if (rhs == 0) return (uint8_t)lhs;
    // Widen to 16-bit to avoid x86 idiv overflow trap on INT8_MIN % -1
    return (uint8_t)((int16_t)lhs % (int16_t)rhs);
}
static inline uint8_t lean_int8_land(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;

    return (uint8_t)(lhs & rhs);
}
static inline uint8_t lean_int8_lor(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;

    return (uint8_t)(lhs | rhs);
}
static inline uint8_t lean_int8_xor(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;

    return (uint8_t)(lhs ^ rhs);
}
static inline uint8_t lean_int8_shift_right(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (((int8_t)a2 % 8) + 8) % 8; // this is smod 8

    return (uint8_t)(lhs >> rhs);
}
static inline uint8_t lean_int8_shift_left(uint8_t a1, uint8_t a2) {
    int8_t rhs = (((int8_t)a2 % 8) + 8) % 8; // this is smod 8

    // do not cast to `int8_t`, as there negative `a1` is undefined behavior
    return a1 << (uint8_t)rhs;
}
static inline uint8_t lean_int8_complement(uint8_t a) {
    int8_t arg = (int8_t)a;

    return (uint8_t)(~arg);
}
static inline uint8_t lean_int8_dec_eq(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;

    return lhs == rhs;
}
static inline uint8_t lean_int8_dec_lt(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;

    return lhs < rhs;
}
static inline uint8_t lean_int8_dec_le(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;

    return lhs <= rhs;
}